--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.18.0",
     "redux-persist": "^6.0.0",
-    "sort-by": "^1.2.0"
+    "sort-by": "^1.2.0",
+    "swiper": "^11.0.5"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
